# vision-ai-alagamentos

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.work  go.work.sum  pyproject.toml  test.csv
.github/workflows/: admin.yaml  agent.yaml  api.yaml  frontend.yaml  identifier.yaml  streamlit.yaml
benchmarking/: .gitignore  go.mod  go.sum  main.go  main.tf  variables.tf
benchmarking/docker/: agent.docker-compose.yaml  api.docker-compose.yaml  send-server.docker-compose.yaml.tftpl  stream-server.docker-compose.yaml
benchmarking/scripts/: install-docker-ubuntu.sh  start-docker-compose.sh  stream-video.sh
libs/: access-token.go  go.mod  http.go
libs/base/: README.md  pyproject.toml  setup.py
libs/base/vision_ai/base/: __init__.py  api.py  metrics.py  model.py  pandas.py  prompt.py  shared_models.py  sheets.py  utils.py
libs/base/vision_ai/base/cloudfunctions/: bq.py  predict.py
libs/base/vision_ai/base/utils_sql/: get_critical_identifications_from_db.sql  historical_preciptation_hexagon.sql
libs/base/vision_ai/cloudfunctions/: bq.py  predict.py
mlruns/0/: meta.yaml
mlruns/240332159452529481/: meta.yaml
mlruns/240332159452529481/45d557dc7b364db7b4d7f13157523470/: meta.yaml
mlruns/240332159452529481/45d557dc7b364db7b4d7f13157523470/tags/: mlflow.runName
mlruns/240332159452529481/db7bcefb166247b2823e0e50b6389720/: meta.yaml
mlruns/240332159452529481/db7bcefb166247b2823e0e50b6389720/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
projects/admin/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
projects/admin/src/: App.vue  config.ts  main.ts
projects/admin/src/_helpers/: api-request.js
projects/admin/src/router/: index.ts
projects/admin/src/stores/: auth.ts
projects/admin/src/views/: AgentDetails.vue  AgentsList.vue  CameraDetails.vue  CameraNew.vue  CameraSnapshots.vue  CamerasList.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  ObjectDetails.vue  ObjectNew.vue  ObjectsList.vue  PromptDetails.vue  PromptNew.vue  PromptsList.vue
projects/agent/: .gitignore  Dockerfile  Makefile  access-token.go  camera.go  config.go  debug.Dockerfile  decoder.go  go.mod  go.sum  h26x_decoder.go  http.go  main.go  metrics.go
projects/api/: .gitignore  Dockerfile  compose-entrypoint.sh  pyproject.toml
projects/api/app/: db.py  dependencies.py  main.py  models.py  oidc.py  pydantic_models.py  utils.py
projects/api/app/config/: __init__.py  base.py  dev.py  prod.py
projects/api/app/routers/: agents.py  auth.py  cameras.py  identifications.py  objects.py  prompts.py
projects/api/migrations/app/: 0_20240122160053_init.py  0_20240207180517_init.py  0_20240209065152_init.py  1_20240124141406_update.py  1_20240217064157_update.py  2_20240124153213_update.py  2_20240221134652_update.py  3_20240124153236_update.py  3_20240222012322_update.py  4_20240131150035_update.py  4_20240222112941_update.py  5_20240131195221_update.py  5_20240222235007_update.py  6_20240131203454_update.py  6_20240301163546_update.py  7_20240201150927_update.py  7_20240313134158_update.py  8_20240506180417_update.py
projects/api/scripts/: add_cameras_from_csv.py  add_objects_from_csv.py  add_objects_to_cameras_from_csv.py  benchmarking_get_all_cameras.py  get_cameras_objects_csv.sh  populate_dummy.py
projects/api/scripts/send_batch_images/: .gitignore  env_example  go.mod  go.sum  main.go
projects/api/tests/: conftest.py  test_agents.py  test_cameras.py  test_identifications.py  test_objects.py  test_prompts.py
projects/example/: pyproject.toml
projects/example/src/: main.py
projects/frontend/: next.config.mjs  package-lock.json  package.json
projects/frontend/app/: layout.tsx
projects/frontend/app/classify/: page.tsx
projects/frontend/app/login/: page.tsx
projects/frontend/components/: ProtectRoute.tsx  SideMenu.tsx  Spinner.tsx
projects/frontend/store/: useAuthStore.ts
projects/frontend/utils/: api.ts  config.ts
projects/identifier/: README.md  get_data_from_bq.sql  main.py  pubsub_publish.py  requirements-dev.txt  requirements.txt
projects/identifier/prompt_testing/: README.md  api_put_post.ipynb  prompt.md  prompt_testing.ipynb  utils_sheets.py
projects/identifier/utils/: README.md  api_put_post.ipynb  evaluation.py  get_data_from_bq.sql  prompt_testing.ipynb  pubsub_publish.py  requirements-evaluation.txt  vision_ai_api.py
projects/llava/: .gitignore  app.py  gunicorn.conf.py  pyproject.toml
projects/llava/app/: http_server.py  model.py  server.py
projects/llava/scripts/: get_random_snapshots.sh  get_snapshots.sh  make_request.sh  start.sh
projects/mlflow/: .gitignore  evaluation.py  mock_final_predictions.csv  mock_snapshots_api_data.json  prompt.md  requirements-evaluation.txt  requirements-mlflow.txt  snapshots_mock.json  utils.sql
projects/sandbox/: get_data_from_bq.sql  prompt_testing.ipynb  utils_sheets.py
projects/streamlit/: .env.example  Dockerfile  README.md  kustomization.yaml  pyproject.toml
projects/streamlit/app/: Home.py
projects/streamlit/app/hide/: Experimente o Modelo_Vision AI.py  Pontos Críticos em Tempo Real.py  Pontos de Alagamento_Vision AI.py
projects/streamlit/app/pages/: Classificador de Labels.py  Onde está Chovendo Agora.py  Visualizar Prompt.py
projects/streamlit/app/utils/: api.py  model.py  utils.py
projects/streamlit/data/: cameras_h3_1.csv
projects/streamlit/data/database/: cameras_aux.csv  pontos_criticos.csv
projects/streamlit/data/temp/: PLANILHAO_PDS_alimentaBI.xlsx  cameras.csv  cameras_url.xlsx  mock_api_data.json  mock_image_classification.csv
scripts/: stream-video.sh  stream.Dockerfile
