[tool.poetry]
name = "vision-ai-base"
version = "0.1.0"
description = "Example shared library"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
packages = [{ include = "vision_ai" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1"
pytz = "^2024.1"
google-cloud-bigquery = "^3.17.2"
pandas = "^2.2.0"
google-cloud-aiplatform = "^1.42.1"
langchain = "^0.1.8"
scikit-learn = "^1.4.1.post1"
tabulate = "^0.9.0"
gspread = "^6.0.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
