[tool.poetry]
name = "vision-ai-llava"
version = "0.1.0"
description = "Vision AI API"
authors = ["Thiago Felipe Cruz E Souza <thiago.felipe@poli.ufrj.br>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]
license = "MIT"
homepage = "https://github.com/prefeitura-rio/vision-ai"
repository = "https://github.com/prefeitura-rio/vision-ai"
keywords = ["vision", "ai", "llava"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.26.0" }
llava-torch = "^1.2.2"
protobuf = "^5.26.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
httpx = "^0.24.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-ordering = "^0.6"
taskipy = "^1.12.0"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"

[tool.coverage.run]
omit = ["app/config/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["dist", "build", ".tox", ".eggs", "scripts"]
addopts = ["--doctest-modules", "--cov=app", "-ra", "-v"]

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."
migrate = "aerich migrate && aerich upgrade"
serve = "uvicorn app.main:app --reload --port 8080 --loop asyncio"
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
