[tool.poetry]
name = "vision-ai-llava"
version = "0.1.0"
description = "Vision AI API"
authors = ["Thiago Felipe Cruz E Souza <thiago.felipe@poli.ufrj.br>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]
license = "MIT"
homepage = "https://github.com/prefeitura-rio/vision-ai"
repository = "https://github.com/prefeitura-rio/vision-ai"
keywords = ["vision", "ai", "llava"]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^5.26.0"
flask = "^3.0.2"
poetry = "^1.8.2"
pyzmq = "^25.1.2"
gunicorn = "^21.2.0"
transformers = "^4.39.1"
torch = "^2.2.1"
pillow = "^10.2.0"
bitsandbytes = "^0.43.0"
accelerate = "^0.28.0"
sentencepiece = "^0.2.0"
diskcache = "^5.6.3"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
httpx = "^0.24.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-ordering = "^0.6"
taskipy = "^1.12.0"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["dist", "build", ".tox", ".eggs", "scripts"]
addopts = ["--doctest-modules", "--cov=app", "-ra", "-v"]

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."
serve = "gunicorn"
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
